fix: breadcrumb font is too small

--- a/wp-content/themes/apacportal/style.css
+++ b/wp-content/themes/apacportal/style.css
@@ -220,7 +220,7 @@ h1, h2, h3, h4, h5, h6{
 
 .breadcrumb{
 	background: none;
-	font-size: 0.8em;
+	font-size: 0.9em;
 }
 
 .single-post .breadcrumb .current{
